nvidia_gpu_stats/vendor/darling/tests/compile-fail/flatten_meta_conflicts.stderr
error: `flatten` and `multiple` cannot be used together
  --> tests/compile-fail/flatten_meta_conflicts.rs:11:24
   |
11 |     #[darling(flatten, multiple, with = demo, skip = true)]
   |                        ^^^^^^^^

error: `flatten` and `with` cannot be used together
  --> tests/compile-fail/flatten_meta_conflicts.rs:11:34
   |
11 |     #[darling(flatten, multiple, with = demo, skip = true)]
   |                                  ^^^^

error: `flatten` and `skip` cannot be used together
  --> tests/compile-fail/flatten_meta_conflicts.rs:11:47
   |
11 |     #[darling(flatten, multiple, with = demo, skip = true)]
   |                                               ^^^^
